--- a/index.html
+++ b/index.html
@@ -3,68 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Siaa's Tribute to Shiva</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        h1, h2 {
-            margin-bottom: 20px;
-            text-align: center;
-        }
-        section {
-            padding: 20px;
-            margin: 20px auto;
-            max-width: 800px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        p {
-            line-height: 1.6;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <title>Siaa's Love Tribute to Shiva</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to an external CSS file -->
 </head>
 <body>
     <header>
         <h1>Siaa's Tribute to Shiva</h1>
     </header>
     <section>
+<center><h3>Hey Shiva! This website is dedicated to you!!</h3></center>
         <h2>Our Story</h2>
-        <p>Our journey together has been filled with phone calls and texts!! I hope we meet soon!! your presence in my life brings happiness.</p>
+        <center><p>Our journey together has been filled with phone calls and texts!! I hope we meet soon!! Your presence in my life brings happiness.</p>
        
-        <p>Hello Shiva! This website is dedicated to you!! <br>
-I know this is childish, but i can't stop thinking about you.
-Here's some cheesy lines for you: <br>
-In your eyes, the stars align,
-Your laughter, like music, so divine.
+        <p>
+        I know this is childish, but I can't stop thinking about you.
+        Here's some cheesy lines for you: <br>
+        In your eyes, the stars align,
+        Your laughter, like music, so divine.
 
-With every smile, my world brightens too,
-In your presence, my heart finds its true hue.
+        With every smile, my world brightens too,
+        In your presence, my heart finds its true hue.
 
-Shiva, your essence fills the air,
-In your simplicity, I find a love so rare.</p>
+        Shiva, your essence fills the air,
+        In your simplicity, I find a love so rare.</p></center>
         <h2>Gallery</h2>
-<p> I want to attach more photos here, so meet me soon!! </p>
-        <img src="shiva.JPG" alt="Shiva" style="max-width: 50%;">
+        <center><p> I want to attach more photos here, so meet me soon!! </p></center>
+        <center><img src="shiva.JPG" alt="Shiva" style="max-width: 20%;"></center>
+        <!-- Remove the img tag -->
     </section>
     <footer>
         <p>Created with love by Siaa</p>
